--- a/suda-in/app/views/layouts/application.html.erb
+++ b/suda-in/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 		<div id="logo">
 			<%= link_to image_tag("logo.png", :alt => "#{APP_CONFIG['site_title']} Suda-in"), root_url %>
 		</div>
-		<div id="top_links_container">
+		<div id="top_links_container2">
 			<% if current_user %>
 				<%= link_to "Settings", settings_path %> |
 				<% unless APP_CONFIG['use_ldap'] %>
@@ -30,6 +30,11 @@
 				<%= link_to "Login", login_path %>
 			<% end %>
 		</div>
+		<% if current_user %>
+			<div id="top_links_container1">
+				<%= link_to "Video Chat", video_chat_path %>
+			</div>
+		<% end %>
 	</div>
 	<div class="clear"></div>
     <div id="container">
@@ -64,7 +69,7 @@
 		<div id="footer" class="round">
 			<h3 class="offscreen">Footer</h3>
 			<ul class="footer-nav">
-				<li class="first">© 2010 Sudain</li>
+				<li class="first">© 2010 Suda-in</li>
 			</ul>
 		</div>
     </div>
