--- a/suda-in/app/views/home/people.html.erb
+++ b/suda-in/app/views/home/people.html.erb
@@ -1,3 +1,3 @@
-
+<h2>People in <%=APP_CONFIG['site_title']%></h2>
 <%= render :partial => "/includes/people_list", :locals => { :people => @people } %>
 
